# Podcast_Creator

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  requirements.txt  script.py  translation.py
static/: landing_script.js  landing_styles.css  script.js  styles.css
templates/: app_index.html  index.html
