[tool.poetry]
name = "podcast-creator"
version = "1.0.0"
description = "Read Less.  Learn More.  Go Further."
authors = ["Cris Benge <cb3704@columbia.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
flask = "^3.1.0"
pypdf2 = "^3.0.1"
anthropic = "^0.42.0"
google-api-python-client = "^2.156.0"
google-cloud-texttospeech = "^2.23.0"
google-cloud-translate = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
